Update_index.html

--- a/index.html
+++ b/index.html
@@ -165,14 +165,14 @@
 </head>
 <body>
     <div class="container">
-        <h2>💰 คำนวณเงินเดือน</h2>
+        <h2>คำนวณเงินเดือน</h2>
 
         <div class="input-group">
             <label for="monthDays">
                 จำนวนวันในเดือนนี้: 
                 <span class="tooltip" onclick="toggleTooltip(this)">
                     (?)
-                    <span class="tooltiptext">กรอกจำนวนวันทั้งหมดในเดือนนี้ (เช่น 28, 29, 30, 31)</span>
+                    <span class="tooltiptext">กรอกจำนวนวันทั้งหมดในเดือนนี้ (เช่น ซัง, กัลป์, กุมาร, หยอกๆ)</span>
                 </span>
             </label>
             <input type="number" id="monthDays" value="30" min="28" max="31" oninput="validateInput(this)">
@@ -181,7 +181,7 @@
         
         <div class="input-group">
             <label for="leaveDays">
-                จำนวนวันที่ลา (ไม่ได้รับเงิน): 
+                จำนวนวันที่ลา (ลาบ่อยเกิ๊น): 
                 <span class="tooltip" onclick="toggleTooltip(this)">
                     (?)
                     <span class="tooltiptext">วันที่ลาป่วย, ลากิจ, หรืออื่นๆ ที่คุณไม่ได้รับค่าจ้าง</span>
@@ -193,7 +193,7 @@
 
         <div class="input-group">
             <label for="runDays">
-                จำนวนวันที่มีวิ่งงาน (วันละ 500 บาท): 
+                จำนวนวันที่มีวิ่งงาน (วันละ 500 🤤): 
                 <span class="tooltip" onclick="toggleTooltip(this)">
                     (?)
                     <span class="tooltiptext">วันที่คุณวิ่งงานพิเศษ ซึ่งจะได้ค่าจ้าง 500 บาท/วัน</span>
